@@ -1,3 +1,8 @@
+2008-03-03  Ethan A Merritt  <merritt@u.washington.edu>
+
+	src/color.c (draw_color_smooth_box) src/unset.c (unset_axislabel):
+	Allow user to set colorbar label rotatation if the bar is vertical.
+
 2008-03-02  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/cgm.trm (CGM_set_color): Decouple dash type from line color.
